# learnvst3sdk

./: CMakeLists.txt
resource/: p_editor.uidesc  pl_editor.uidesc
source/: p_cids.h  p_controller.cpp  p_controller.h  p_entry.cpp  p_processor.cpp  p_processor.h  pl_cids.h  pl_controller.cpp  pl_controller.h  pl_entry.cpp  pl_processor.cpp  pl_processor.h  version.h
